<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <Button
        android:id="@+id/search_button"
        android:layout_width="0dp"
        android:layout_weight="9"
        android:layout_height="wrap_content"
        android:text="Search"
        android:layout_margin="8dp"/>
    <Button
        android:id="@+id/create_button"
        android:layout_width="0dp"
        android:layout_weight="9"
        android:layout_height="wrap_content"
        android:text="Create"
        android:layout_margin="8dp"/>
    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"/>
    <Button
        android:id="@+id/playlists_button"
        android:layout_width="0dp"
        android:layout_weight="10"
        android:layout_height="wrap_content"
        android:text="Playlists"
        android:layout_margin="8dp"/>
    <EditText
        android:id="@+id/playlist_name"
        android:layout_width="0dp"
        android:layout_weight="20"
        android:layout_height="wrap_content"
        android:hint="Enter playlist name"/>
  </LinearLayout>

  <ScrollView
      android:layout_height="0dp"
      android:layout_weight="1"
      android:layout_width="match_parent"
      tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/song_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </LinearLayout>
  </ScrollView>
  <LinearLayout
      android:id="@+id/controllerBar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
      <TextView
          android:id="@+id/current_time_view"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="8dp"
          android:text="00:00"/>

      <TextView
          android:id="@+id/total_time_view"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="wrap_content"
          android:layout_margin="8dp"
          android:gravity="end"
          android:text="00:00" />
    </LinearLayout>
    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/controller_Bar"
        android:orientation="horizontal">
      <ImageButton
          android:id="@+id/play_pause_button"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:src="@drawable/ic_action_play"/>
      <ImageButton
          android:id="@+id/stop_button"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:src="@drawable/ic_action_stop"/>
    </LinearLayout>
  </LinearLayout>
</LinearLayout>