<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/song_fragment_layout"
    tools:context=".SongFragment"
    android:orientation="horizontal">
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/song_fragment_relative_layout"
        tools:context=".SongFragment">
        <TextView
            android:id="@+id/song_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Wisdom"
            android:layout_toEndOf="@id/song_status_button"/>
        <TextView
            android:id="@+id/song_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Guggenheim grotto"
            android:layout_below="@id/song_title"
            android:layout_toEndOf="@id/song_status_button"/>
        <ImageButton
            android:id="@+id/song_status_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_action_play"
            android:contentDescription="song_status"/>
    </RelativeLayout>
    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>